--- a/Localizations/Russian/Cities & Knights/Teutons.txt
+++ b/Localizations/Russian/Cities & Knights/Teutons.txt
@@ -1,1 +1,1 @@
-﻿Один раз за свой ход вы можете можно бесплатно призвать 1 рыцаря. Вы не можете отдать рьяного рыцара в ситуации, если другой игрок использует по отношению к вам карту развития Дезертир. Если у вас нет вольных рыцарей, то карта развития Дезертир не может быть использована против вас.
+﻿Один раз за свой ход вы можете бесплатно призвать 1 рыцаря. Вы не можете отдать рьяного рыцара в ситуации, если другой игрок использует по отношению к вам карту развития Дезертир. Если у вас нет вольных рыцарей, то карта развития Дезертир не может быть использована против вас.
