--- a/Localizations/Russian/Base/Vietnamese.txt
+++ b/Localizations/Russian/Base/Vietnamese.txt
@@ -1,3 +1,3 @@
 ﻿Важно: выбор этой карты должен быть осуществлен и объявлен до того, как кто-либо из игроков начнет устанавливать свои первоначальные поселения.
 
-Вы ходите первым и выбираете порядок хода игроков. Вы также первым размещаете второе поселение (сразу после того, как последний игрок разместит свое первое поселение). Когда вы вытягиваете карту у другого игрока, вы можете посмотреть все его карты (но не карты развития).
+Вы ходите первым и выбираете порядок хода игроков. Вы также первым размещаете второе поселение (сразу после того, как последний игрок разместит свое первое поселение и дорогу). Когда вы вытягиваете карту у другого игрока, вы можете посмотреть все его карты (но не карты развития).
