--- a/Localizations/Russian/Base/Britons.txt
+++ b/Localizations/Russian/Base/Britons.txt
@@ -1,1 +1,1 @@
-﻿Один раз за ход при строительстве поселений, городов или покупке карт развития вы можете заменить 1 любое необходимое для постройки сырье на 1 карту шерсти. Получите в начале игры 1 дополнительную карту шерсти.
+﻿Один раз за ход при строительстве поселений, городов или покупке карт развития вы можете заменить 1 любую необходимую для постройки карту сырья на 1 карту шерсти. Получите в начале игры 1 дополнительную карту шерсти.
