--- a/Localizations/Russian/Cities & Knights/Sicilians.txt
+++ b/Localizations/Russian/Cities & Knights/Sicilians.txt
@@ -1,1 +1,1 @@
-﻿Вы можете строить поселения, города и дороги между ходами других игроков до броска кубиков. Получите в начале игры 1 дополнительную карту глины.
+﻿Вы можете строить поселения, города и дороги между ходами других игроков до броска кубиков и непосредственно перед вашим ходом. Получите в начале игры 1 дополнительную карту глины.
