--- a/Localizations/Russian/Traders & Barbarians/Bengalis.txt
+++ b/Localizations/Russian/Traders & Barbarians/Bengalis.txt
@@ -1,1 +1,1 @@
-﻿Ваш торговый обоз дополнительно действует как поселение, т.е. если при выпадении кубиков выпал номер гекса, с которым граничит ваш обоз, то вы получаете соответствующую карту сырья. Для победы вам требуется набрать на 1 очко больше.
+﻿Ваш торговый обоз дополнительно действует как поселение, т.е. если при выпадении кубиков выпал номер гекса, с которым граничит ваш обоз, то вы получаете соответствующую карту сырья. Для победы вам требуется набрать на 1 победное очко больше.
