--- a/Localizations/Russian/Traders & Barbarians/Koreans.txt
+++ b/Localizations/Russian/Traders & Barbarians/Koreans.txt
@@ -1,1 +1,1 @@
-﻿Повышение стоимости обоза для вас стоит меньше на одну карту древесины. Получите в начале игры 1 дополнительную карту руды.
+﻿Повышение стоимости обоза стоит для вас меньше на одну карту древесины. Получите в начале игры 1 дополнительную карту руды.
