--- a/Localizations/Russian/Base/Persians.txt
+++ b/Localizations/Russian/Base/Persians.txt
@@ -1,1 +1,1 @@
-﻿Вы можете размещать поселения (кроме стартового) на расстоянии 1 дороги от поселений и городов других игроков (но не ваших). Получите в начале игры 1 дополнительную карту древесины.
+﻿Вы можете размещать поселения (кроме стартовых) на расстоянии 1 дороги от поселений и городов других игроков (но не ваших). Получите в начале игры 1 дополнительную карту древесины.
